Villanova_Dev1/src/objects/Bios__c.object
<CustomObject>
    <description>Object utilized for listing the various ways in which a Contact is related to to Villanova University and/or personal highlights that are important for profiling a person.  This object will has multiple record types and field dependencies to represent the different types of records.  

mrm 6/2/10 - Specifically it will house Award, Degree and Employment from Banner.</description>
    <fields>
        <fullName>Attendance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <label>Award</label>
        <picklist>
            <picklistValues>
                <fullName>Alumni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honorary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BANNER_PIDM__c</fullName>
        <label>BANNER_PIDM</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BANNER_SEQ_NO__c</fullName>
        <label>BANNER_SEQ_NO</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chapter_Member_Number__c</fullName>
        <label>Chapter Member Number</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Degree_Date__c</fullName>
        <label>Degree_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <label>Degree</label>
        <picklist>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <description>Name of Company</description>
        <label>Employer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>Date Term Completes (or is expected to complete)</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_CRN__c</fullName>
        <label>Event_CRN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Desc__c</fullName>
        <label>Event_Desc</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Date__c</fullName>
        <label>Fee_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <referenceTo>Industry__c</referenceTo>
        <relationshipLabel>Bios</relationshipLabel>
        <relationshipName>Bios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Involve_c__c</fullName>
        <label>Involve__c</label>
        <picklist>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <picklist>
            <picklistValues>
                <fullName>C Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managing Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <label>Job Status</label>
        <picklist>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full-time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part-time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse&apos;s Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merger Title Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merger of Company</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Menu_Desc__c</fullName>
        <label>Menu_Desc</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Tag_Name__c</fullName>
        <label>Name_Tag_Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_del__c</fullName>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bios (Organization)</relationshipLabel>
        <relationshipName>Bios1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Place_Card_Name__c</fullName>
        <label>Place_Card_Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <label>Related To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bios</relationshipLabel>
        <relationshipName>Bios</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rsvp_Code__c</fullName>
        <label>Rsvp_Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rsvp_Date__c</fullName>
        <label>Rsvp_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rsvp_Fees_Desc__c</fullName>
        <label>Rsvp_Fees_Desc</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_College__c</fullName>
        <label>School College</label>
        <picklist>
            <picklistValues>
                <fullName>No College Designated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unused college in stat calc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commerce and Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rosemont College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabrini College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St Joseph&apos;s University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeastern College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bryn Mawr College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuing Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts and Sciences (Alumni only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time Studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuing Studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Villanova University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer Students WEBAdm only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Business</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School</label>
        <referenceTo>School__c</referenceTo>
        <relationshipLabel>Bios</relationshipLabel>
        <relationshipName>Bios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Date Term Initiates</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>TEXT(School__r.State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Count__c</fullName>
        <label>Ticket_Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title_Role__c</fullName>
        <label>Title/Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <inlineHelpText>Enter the year of the Contact&apos;s Degree year.</inlineHelpText>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1989</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1988</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1987</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1986</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1985</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1984</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1983</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1982</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Bios</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PP-{0000}</displayFormat>
        <label>Personal Profile</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bios</pluralLabel>
    <recordTypes>
        <fullName>Activities</fullName>
        <active>true</active>
        <description>Represents activities the person is or has been involved in</description>
        <label>Activities</label>
    </recordTypes>
    <recordTypes>
        <fullName>Award</fullName>
        <active>true</active>
        <description>Represents awards the person is or has received</description>
        <label>Award</label>
    </recordTypes>
    <recordTypes>
        <fullName>Chapter_Membership</fullName>
        <active>true</active>
        <description>Represents alumni chapters the person is or has been associated with</description>
        <label>Chapter Membership</label>
    </recordTypes>
    <recordTypes>
        <fullName>Employment</fullName>
        <active>true</active>
        <description>Represents the person&apos;s employment history (current employment should be displayed in the organizational affiliation)</description>
        <label>Employment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <description>Represents events attended/participated in</description>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Financial</fullName>
        <active>true</active>
        <description>Represents financial history of the person</description>
        <label>Financial</label>
    </recordTypes>
    <recordTypes>
        <fullName>Gift_Society</fullName>
        <active>true</active>
        <description>historical list of gift societies acheived</description>
        <label>Gift Society</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <description>Profile representing Contact&apos;s Personal Profile.</description>
        <label>Education</label>
    </recordTypes>
    <recordTypes>
        <fullName>Volunteering</fullName>
        <active>true</active>
        <description>Represents volunteer activities the person is or has been involved in</description>
        <label>Volunteering</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>